--- a/src/components/Body/Body.scss
+++ b/src/components/Body/Body.scss
@@ -278,7 +278,7 @@ main {
 
 .project {
   position: relative;
-  overflow: scroll;
+  overflow: auto;
   box-shadow: 0 4px 20px -1px rgb(0 0 0 / 40%);
   border-radius: 8px;
 
@@ -302,12 +302,12 @@ main {
     }
 
     &__photocard {
-      height: 15rem;
+      height: 13.5rem;
     }
 
     &__photocard-img {
       width: 100%;
-      height: 250px;
+      height: 15rem;
       object-fit: cover;
     }
 
@@ -316,16 +316,16 @@ main {
       top: 0;
       left: 0;
       width: 100%;
-      height: 40vh;
+      height: fit-content;
       color: $primary-white;
       background: rgba(0, 0, 0, 0.6);
       line-height: 1.4;
       opacity: 0;
     }
+
     :hover {
       opacity: 1;
       transition: 0.6s ease-out;
-      height: fit-content;
     }
 
     &__photocard-content {
@@ -352,4 +352,10 @@ main {
       transition: 0.6s ease-out;
     }
   }
+}
+
+.test {
+  margin-bottom: 2rem;
+  text-transform: capitalize;
+  font-weight: 400;
 }
