--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -5,7 +5,7 @@
   padding-top: 64px;
   padding-bottom: 64px;
 
-  &__title {
+  &__cta {
     margin-bottom: 2rem;
     text-transform: capitalize;
     font-weight: 400;
@@ -29,58 +29,100 @@
 
 .project {
   position: relative;
-  overflow: auto;
+  overflow: hidden;
   box-shadow: 0 4px 20px -1px rgb(0 0 0 / 40%);
   border-radius: 8px;
 
   .content {
     h3 {
       font-size: 32px;
-      margin-bottom: 16px;
 
-      @media (max-width: 2000px) {
-        font-size: 28px;
+      margin-top: 6px;
+      margin-bottom: 12px;
+
+      @include tablet {
+        margin-bottom: 15px;
+      }
+
+      @include desktop {
+        font-size: 36px;
+
+        margin-top: 30px;
+        margin-bottom: 20px;
       }
     }
 
     p {
-      font-size: 18px;
+      font-size: 16px;
       margin-bottom: 16px;
 
-      @media (max-width: 2000px) {
-        font-size: 16px;
+      @include tablet {
+        font-size: 18px;
+      }
+
+      @include desktop {
+        font-size: 20px;
       }
     }
 
     &__photocard {
-      height: 12rem;
+      @include tablet {
+        height: 180px;
+      }
+      @include desktop {
+        height: 240px;
+      }
     }
 
     &__photocard-img {
       width: 100%;
-      height: 12rem;
+      height: 100%;
       object-fit: cover;
     }
 
-    &__photocard-container {
+    &__overlay {
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
-      height: fit-content;
+      height: 100%;
       color: $primary-white;
-      background: rgba(0, 0, 0, 0.6);
+      background: rgba(0, 0, 0, 0.8);
+      transition: 0.7s ease-out;
       line-height: 1.4;
       opacity: 0;
     }
 
     :hover {
       opacity: 1;
-      transition: 0.6s ease-out;
     }
 
     &__photocard-content {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       padding: 1rem;
+    }
+  }
+}
+
+.button {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+
+  &__link {
+    @include button;
+    text-align: center;
+    font-size: 14px;
+    color: $primary-black;
+    background-color: $primary-white;
+
+    &:hover {
+      color: $primary-white;
+      background-color: $primary-black;
+      transition: 0.6s ease-out;
     }
   }
 }
