--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -14,9 +14,7 @@ header {
     align-items: center;
     background-color: $primary-white;
     box-shadow: 0 4px 20px -1px rgb(0 0 0 / 40%);
-    padding: 0 3rem;
-    padding-top: 32px;
-    padding-bottom: 32px;
+    padding: 2rem 1.5rem;
 
     h2 {
       color: $primary-black;
@@ -25,7 +23,7 @@ header {
       letter-spacing: -2.5px;
 
       @media (max-width: 375px) {
-        font-size: 26px;
+        font-size: 28px;
       }
       @media (min-width: 425px) {
         font-size: 35px;
