--- a/src/components/Techstack/Techstack.scss
+++ b/src/components/Techstack/Techstack.scss
@@ -14,22 +14,14 @@
 
   // sizing the techstack icon itself
   &__icon {
-    @media (max-width: 2000px) {
-      width: 60%;
-    }
-    @media (max-width: 767px) {
-      width: 75%;
-    }
-    @media (max-width: 425px) {
-      width: 100%;
-    }
+    width: 50%;
   }
 
   &__services-grid {
     @media (max-width: 2000px) {
       margin-top: 5rem;
       display: grid;
-      grid-template-columns: repeat(5, 1fr);
+      grid-template-columns: repeat(6, 1fr);
       grid-gap: 16px;
     }
 
@@ -46,6 +38,9 @@
   &__service {
     display: flex;
     justify-content: center;
+    padding: 0.5rem;
+    border-radius: 16px;
+    box-shadow: rgb(0 0 0 / 35%) 0px 5px 15px;
 
     @media (max-width: 425px) {
       padding: 1rem;
