--- a/src/components/Techstack/Techstack.scss
+++ b/src/components/Techstack/Techstack.scss
@@ -25,11 +25,16 @@
       grid-gap: 16px;
     }
 
+    @media (max-width: 1024px) {
+      grid-template-columns: repeat(4, 1fr);
+    }
+
     @media (max-width: 767px) {
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: repeat(3, 1fr);
     }
 
     @media (max-width: 425px) {
+      grid-template-columns: repeat(2, 1fr);
       margin-top: 2rem;
     }
   }
