--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -3,7 +3,11 @@
 
 .contact {
   background-color: $background-footer;
+  border-radius: 0px 5rem 0px 0px;
 
+  @include desktop {
+    border-radius: 0px 10rem 0px 0px;
+  }
   &__container {
     padding-top: 32px;
     padding-bottom: 64px;
