--- a/src/components/Techstack/Techstack.scss
+++ b/src/components/Techstack/Techstack.scss
@@ -14,43 +14,23 @@
 
   // sizing the techstack icon itself
   &__icon {
-    width: 50%;
+    width: 7rem;
+
+    @media (max-width: 425px) {
+      width: 5rem;
+    }
   }
 
   &__services-grid {
-    @media (max-width: 2000px) {
-      margin-top: 5rem;
-      display: grid;
-      grid-template-columns: repeat(6, 1fr);
-      grid-gap: 16px;
-    }
-
-    @media (max-width: 1024px) {
-      grid-template-columns: repeat(4, 1fr);
-    }
-
-    @media (max-width: 767px) {
-      grid-template-columns: repeat(3, 1fr);
-    }
-
-    @media (max-width: 425px) {
-      grid-template-columns: repeat(2, 1fr);
-      margin-top: 2rem;
-    }
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
   }
 
   // sizing the techstack icon container itself
   &__service {
-    display: flex;
-    justify-content: center;
-    padding: 0.5rem;
-    border-radius: 16px;
-    box-shadow: rgb(0 0 0 / 35%) 0px 5px 15px;
-
-    @media (max-width: 425px) {
-      padding: 1rem;
-      max-width: 100%;
-    }
+    padding: 1rem;
   }
 
   &__spacer {
