--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -15,6 +15,7 @@ header {
     background-color: $primary-white;
     box-shadow: 0 4px 20px -1px rgb(0 0 0 / 40%);
     padding: 2rem 1.5rem;
+    gap: 0.5rem;
 
     h2 {
       color: $primary-black;
@@ -22,9 +23,6 @@ header {
       font-weight: 300;
       letter-spacing: -2.5px;
 
-      @media (max-width: 375px) {
-        font-size: 28px;
-      }
       @media (min-width: 425px) {
         font-size: 35px;
       }
