--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -12,16 +12,17 @@
     padding-top: 32px;
     padding-bottom: 64px;
 
+    display: flex;
+    justify-content: space-evenly;
+    flex-flow: wrap;
+    align-items: center;
+    gap: 1rem;
+
     h2 {
       color: $primary-white;
-      padding-bottom: 2rem;
 
       @include tablet {
         font-size: 4rem;
-      }
-
-      @include desktop {
-        font-size: 5rem;
       }
     }
   }
@@ -34,25 +35,12 @@
     margin: 0;
   }
 
-  &__borderbottom {
-    border-bottom: 2px solid $primary-white;
-    padding-bottom: 0.5rem;
-
-    @include tablet {
-      border-bottom: 4px solid $primary-white;
-      padding-bottom: 1rem;
-    }
-  }
-
   &__social {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 3rem 0;
-
-    @include tablet {
-      justify-content: flex-end;
-    }
+    gap: 1rem;
   }
 
   &__link {
@@ -80,7 +68,7 @@
     }
   }
 
-  &__copyright {
+  &__subtext {
     font-size: 12px;
     text-align: center;
   }
