--- a/src/components/Techstack/Techstack.scss
+++ b/src/components/Techstack/Techstack.scss
@@ -17,7 +17,7 @@
     width: 7rem;
     aspect-ratio: 4/3;
     object-fit: contain;
-    mix-blend-mode: color-burn;
+    // mix-blend-mode: color-burn;
   }
 
   &__services-grid {
