--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -29,7 +29,7 @@
 
   &__title {
     font-size: 42px;
-    letter-spacing: 1px;
+    letter-spacing: -3px;
     font-weight: 500;
     text-transform: capitalize;
     margin: 0;
@@ -61,7 +61,9 @@
     display: flex;
     justify-content: center;
     margin-top: 0.5rem;
-    color: rgba(255, 255, 255, 0.478);
+    color: $primary-white;
+    letter-spacing: 0.5px;
+    word-spacing: 1px;
 
     @include tablet {
       margin: 0;
