--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -3,10 +3,10 @@
 
 .contact {
   background-color: $background-footer;
-  border-radius: 0px 5rem 0px 0px;
+  border-radius: 5rem 0 0 0;
 
   @include desktop {
-    border-radius: 0px 10rem 0px 0px;
+    border-radius: 10rem 0 0 0;
   }
   &__container {
     padding-top: 32px;
@@ -44,6 +44,10 @@
   }
 
   &__link {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+
     @include tablet {
       padding: 0 3rem;
     }
